gcc/testsuite/rust/rustc/ui/feature-gates/rustc-private_dg.rs
// gate-test-rustc_private

extern crate cfg_if; // { dg-error ".E0658." "" { target *-*-* } }

fn main() {}

